--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<button class="red">Red</button>
-    <link rel="stylesheet" type="text/css" href="fuze.css">
+<link rel="stylesheet" type="text/css" href="fuze.css"><button class="btn-1">Fuze</button>
+
