--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" type="text/css" href="fuze.css"><button class="btn-1">Fuze</button>
+<link rel="stylesheet" type="text/css" href="fuze.css"><button class="fuze">Fuze</button>
 
