--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css"><button class="btn">Fuze</button>
+<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css"><button class="plus"></button>
 
