--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css"><button class="plus"></button>
+<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
+<div class="button__holder"><button class="plus"></button></div>
 
