--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
-<div class="button__holder"><button class="plus"></button></div>
+<div id="holder"><div class="button"><p class="btnText">READY?</p><div class="btnTwo"><p class="btnText2">GO!</p></div></div>
 
