--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css"><div id="holder"><div class="button">
-<p class="btnText">READY?</p><div class="btnTwo"><p class="btnText2">GO!</p></div></div>
-
+<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
+<span class="link-inner">On a button</span>
