--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
+<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.less">
 <span class="link-inner">On a button</span>
