--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.less">
-<span class="link-inner">On a button</span>
+<div class="table"><div class="table-cell"><div><a href="#" class="btn-link"><span class="link-inner">
+On a button</span></a></div><div>
