--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.less">
-<div class="table"><div class="table-cell"><div><a href="#" class="btn-link"><span class="link-inner">
-On a button</span></a></div><div>
+<body style="background-color:black;"><link rel="stylesheet" type="text/scss" href="fuze.scss">
+<a href="#" class="button">Ooh, shiny!</a>
