--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/scss" href="fuze.scss">
-<a href="#" class="button">Ooh, shiny!</a>
+<a href="http://garage-interactive.com" class="btn"><span>Click here</span></a>
