--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/scss" href="fuze.scss">
+<script src="fuze.js" type="text/javascript"></script>
 <a href="http://garage-interactive.com" class="btn"><span>Click here</span></a>
