--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
-<script src="fuze.js" type="text/javascript"></script><div>
-<button class="rainbow"></button>
+<i class="icon-arrow-down"></i>
