--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
-<i class="icon-arrow-down"></i>
+<link rel="stylesheet" type="text/css" href="ionicons.min.css"><i class="ico-arrow-down"></i>
