--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
-<link rel="stylesheet" type="text/css" href="ionicons.min.css"><i class="ico-arrow-down"></i>
+<img src="layout.png" class="w3-hover-opacity">
