--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<body style="background-color:black;"><link rel="stylesheet" type="text/css" href="fuze.css">
+<body style="background-color:grey;"><link rel="stylesheet" type="text/css" href="fuze.css">
 <img src="layout.png" class="w3-hover-opacity">
