--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<body style="background-color:grey;"><link rel="stylesheet" type="text/css" href="fuze.css">
+<body style="background-color:white;"><link rel="stylesheet" type="text/css" href="fuze.css">
 <a rel="glow" class="button glow">Glow</a>
