--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <body style="background-color:white;"><link rel="stylesheet" type="text/css" href="fuze.css">
-<a rel="glow" class="btn glow">Glow</a>
+<a href="#" rel="glow" class="btn-1 glow">Glow</a>
